<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/name"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mohamed"
            android:textSize="18sp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/idLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/id"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:text="@string/_56895"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/lastKnownLocationLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_known_location"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/lastKnownLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginStart="8dp" />

        </LinearLayout>
        <Button
            android:id="@+id/onMapBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/roundshape"
            android:layout_marginLeft="8dp"
            android:text="@string/on_map" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/friendImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_color="#fff"
        app:civ_border_width="2dp"
        android:src="@drawable/d"

        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
</RelativeLayout>